authelia-manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: default
  labels:
    app: authelia
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9091
    targetPort: http
    protocol: TCP
  - name: metrics
    port: 9959
    targetPort: metrics
    protocol: TCP
  selector:
    app: authelia
